--- a/aoc18/bower.json
+++ b/aoc18/bower.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "purescript-prelude": "^3.1.1",
     "purescript-console": "^3.0.0",
-    "purescript-lists": "^4.12.0"
+    "purescript-lists": "^4.12.0",
+    "purescript-strings": "^3.3.2",
+    "purescript-maps": "^3.6.0",
+    "purescript-debug": "^3.0.0",
+    "purescript-node-fs": "^4.0.0",
+    "purescript-node-fs-aff": "^5.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
